--- a/Ca_01_ConsoleLogger_01/Ca_01_ConsoleLogger_01.vcxproj
+++ b/Ca_01_ConsoleLogger_01/Ca_01_ConsoleLogger_01.vcxproj
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Ca_01_ConsoleLogger_01.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ConsoleLogger.hpp" />
