--- a/Ca_01_ConsoleLogger_01/Ca_01_ConsoleLogger_01.vcxproj.filters
+++ b/Ca_01_ConsoleLogger_01/Ca_01_ConsoleLogger_01.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Ca_01_ConsoleLogger_01.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
