--- a/Ca_02_LoggerService_01/Ca_02_LoggerService_01.vcxproj
+++ b/Ca_02_LoggerService_01/Ca_02_LoggerService_01.vcxproj
@@ -127,7 +127,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Ca_02_LoggerService_01.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FormatDateTime.hpp" />
