--- a/Ca_05_Logger_Executor_In_Service_01/Ca_05_Logger_Executor_In_Service_01.vcxproj.filters
+++ b/Ca_05_Logger_Executor_In_Service_01/Ca_05_Logger_Executor_In_Service_01.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Ca_05_Logger_Executor_In_Service_01.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ConsoleLogger.cpp">
