--- a/Ca_08_MultiLogServiceAdvanced_01/Ca_08_MultiLogServiceAdvanced_01.vcxproj
+++ b/Ca_08_MultiLogServiceAdvanced_01/Ca_08_MultiLogServiceAdvanced_01.vcxproj
@@ -128,7 +128,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Ca_08_MultiLogServiceAdvanced_01.cpp" />
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="DateTimeFormatter.cpp" />
   </ItemGroup>
   <ItemGroup>
