--- a/Ca_02_LoggerService_01/Ca_02_LoggerService_01.vcxproj.filters
+++ b/Ca_02_LoggerService_01/Ca_02_LoggerService_01.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Ca_02_LoggerService_01.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
