--- a/Ca_03_LoggerInThreadPool_01/Ca_03_LoggerInThreadPool_01.vcxproj.filters
+++ b/Ca_03_LoggerInThreadPool_01/Ca_03_LoggerInThreadPool_01.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Ca_03_LoggerInThreadPool_01.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="LogService.cpp">
