--- a/Ca_04_SingleExecutor_01/Ca_04_SingleExecutor_01.vcxproj.filters
+++ b/Ca_04_SingleExecutor_01/Ca_04_SingleExecutor_01.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Ca_04_SingleExecutor_01.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="ConsoleLogger.cpp">
