--- a/Ca_06_MultiLogger_01/Ca_06_MultiLogger_01.vcxproj.filters
+++ b/Ca_06_MultiLogger_01/Ca_06_MultiLogger_01.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Ca_06_MultiLogger_01.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="DateTimeFormatter.cpp">
