--- a/Ca_07_MultiLogService_02/Ca_07_MultiLogService_02.vcxproj.filters
+++ b/Ca_07_MultiLogService_02/Ca_07_MultiLogService_02.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Ca_07_MultiLogService_02.cpp">
+    <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="DateTimeFormatter.cpp">
