--- a/Ca_08_MultiLogServiceAdvanced_01/Ca_08_MultiLogServiceAdvanced_01.vcxproj
+++ b/Ca_08_MultiLogServiceAdvanced_01/Ca_08_MultiLogServiceAdvanced_01.vcxproj
@@ -139,6 +139,9 @@
     <ClInclude Include="MultiSequentialExecutor.hpp" />
     <ClInclude Include="RealLoggers.hpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Doc.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
