--- a/Ca_01_ConsoleLogger_01/Ca_01_ConsoleLogger_01.vcxproj
+++ b/Ca_01_ConsoleLogger_01/Ca_01_ConsoleLogger_01.vcxproj
@@ -132,6 +132,9 @@
   <ItemGroup>
     <ClInclude Include="ConsoleLogger.hpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Doc.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
