--- a/Ca_02_LoggerService_01/Ca_02_LoggerService_01.vcxproj.filters
+++ b/Ca_02_LoggerService_01/Ca_02_LoggerService_01.vcxproj.filters
@@ -27,4 +27,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Doc.txt">
+      <Filter>Source Files</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
