--- a/Ca_03_LoggerInThreadPool_01/Ca_03_LoggerInThreadPool_01.vcxproj
+++ b/Ca_03_LoggerInThreadPool_01/Ca_03_LoggerInThreadPool_01.vcxproj
@@ -135,6 +135,9 @@
     <ClInclude Include="LogService.hpp" />
     <ClInclude Include="ThreadPool.hpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Doc.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
