--- a/Ca_04_SingleExecutor_01/Ca_04_SingleExecutor_01.vcxproj
+++ b/Ca_04_SingleExecutor_01/Ca_04_SingleExecutor_01.vcxproj
@@ -137,6 +137,9 @@
     <ClInclude Include="ConsoleLogger.hpp" />
     <ClInclude Include="SingleExecutor.hpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Doc.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
