--- a/Ca_05_Logger_Executor_In_Service_01/Ca_05_Logger_Executor_In_Service_01.vcxproj
+++ b/Ca_05_Logger_Executor_In_Service_01/Ca_05_Logger_Executor_In_Service_01.vcxproj
@@ -142,6 +142,9 @@
     <ClInclude Include="LogService.hpp" />
     <ClInclude Include="SingleThreadExecutor.hpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Doc.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
     <Import Project="..\packages\Microsoft.Windows.CppWinRT.2.0.220531.1\build\native\Microsoft.Windows.CppWinRT.targets" Condition="Exists('..\packages\Microsoft.Windows.CppWinRT.2.0.220531.1\build\native\Microsoft.Windows.CppWinRT.targets')" />
