--- a/Ca_06_MultiLogger_01/Ca_06_MultiLogger_01.vcxproj
+++ b/Ca_06_MultiLogger_01/Ca_06_MultiLogger_01.vcxproj
@@ -135,6 +135,9 @@
     <ClInclude Include="Logger.hpp" />
     <ClInclude Include="RealLoggers.hpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Doc.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
