--- a/Ca_07_MultiLogService_02/Ca_07_MultiLogService_02.vcxproj
+++ b/Ca_07_MultiLogService_02/Ca_07_MultiLogService_02.vcxproj
@@ -136,6 +136,9 @@
     <ClInclude Include="MultiLogService.hpp" />
     <ClInclude Include="RealLoggers.hpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="Doc.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
